avant le footer

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ html {
 }
 header{
   background-image:url("images/header.jpg");
-  width: 1380px;
   height:1000px;
   background-size: cover;
 }
@@ -40,9 +39,9 @@ h1{
 
 
 .link{
-  position: relative;
-  /*display: inline-block;*/
-left: 730px;
+position: relative;
+float: right;
+margin-right: 100px;
 word-spacing: 30px;
 padding: 10px;
 top:-100px;
@@ -90,7 +89,7 @@ color:#465065;
 
 
 .titre .bouton a{
-  /text-align: left;
+  text-align: left;
   line-height: 60px;
   padding: 20px 30px;
   vertical-align: middle;
@@ -98,9 +97,9 @@ color:#465065;
   color: white;
   margin-top: 200px;
   margin-right: 0px;
-  margin-left: 0px;*/
+  margin-left: 0px;
 
-  margin: 1000px 910px 200px 200px;
+  /*margin: 1000px 910px 200px 200px;*/
   padding: 24px 24px 24px 24px;
   border-radius: 10px;
   background: rgb(250,70,80);
@@ -115,18 +114,37 @@ display: block;
   margin-bottom: 20px;
 }
 
- .peace{
-  text-align: center;
-  margin-right:550px;
-  margin-top: 10px;
+ .section-2{
+display: flex;
+position: relative;
+padding: 24px 24px 24px 200px;
+justify-content: space-between;
  }
 
- .peace:before{
-   content:"";
- display: block;
-   width: 58px;
-   height: 6px;
-   background-color: #f0454C;
-   margin-bottom: 20px;
-   margin-left: 350px;
+.simple{
+position: relative;
+left: 30px;
+
+
+}
+
+span{
+  display: block;
+}
+
+
+
+
+main{
+  width: 940px;
+  max-width: 100%;
+  background-color: khaki;
+  margin: 20px auto 0;
+
+}
+ 
+.portfolio {
+  display: flex;
+
+
  }
