--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ justify-content: space-between;
 
 .simple{
 position: relative;
-left: 30px;
+left: 5px;
 
 
 }
@@ -143,3 +143,9 @@ main{
   margin: 20px auto 0;
 
 }
+
+.portfolio {
+  display: flex;
+
+
+ }
